<resources>
    <string name="app_name">Geometrika</string>
    <string name="tiga_dimensi">3 Dimensi</string>
    <string name="dua_dimensi">2 Dimensi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nol">0</string>
    <string name="hitung">Hitung</string>
    <string name="masukkan_tinggi">Masukkan Tinggi</string>
    <string name="masukkan_panjang">Masukkan Panjang</string>
    <string name="masukkan_lebar">Masukkan Lebar</string>
    <string name="volume">Volume</string>
    <string name="luas_permukaan">Luas Permukaan</string>
    <string name="luas">Luas</string>
    <string name="keliling">Keliling</string>
    <string name="masukkan_jari_jari">Masukkan Jari-jari</string>
    <string name="bola">Bola</string>
    <string name="kubus">Kubus</string>
    <string name="masukkan_panjang_sisi">Masukkan Panjang Sisi</string>
    <string name="lingkaran">Lingkaran</string>
    <string name="persegi">Persegi</string>
    <string name="persegi_panjang">Persegi Panjang</string>
    <string name="segitiga">Segitiga</string>
    <string name="masukkan_panjang_alas">Masukkan Panjang Alas</string>
    <string name="tabung">Tabung</string>
</resources>
