<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Balok"
            android:textSize="30sp"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="30dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_panjangBalok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="numberDecimal"
                android:hint="@string/masukkan_panjang" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_lebarBalok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="numberDecimal"
                android:hint="@string/masukkan_lebar" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_tinggiBalok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="numberDecimal"
                android:hint="@string/masukkan_tinggi" />
        </android.support.design.widget.TextInputLayout>

        <Button android:id="@+id/btn_hitungBalok"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/hitung"
            android:background="@color/colorPrimary"
            android:layout_marginTop="@dimen/margin_button"
            android:layout_marginBottom="@dimen/margin_button"
            android:textColor="@android:color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/volume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/vol"
                android:layout_margin="@dimen/margin_output"
                android:textAlignment="center"
                android:padding="@dimen/padding"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/VolumeBalok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/box"
                android:layout_margin="@dimen/margin_output"
                android:text="@string/nol"
                android:textSize="@dimen/vol"
                android:padding="@dimen/padding"
                android:layout_weight="1"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/luas_permukaan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/luas_per"
            android:layout_margin="@dimen/margin_output"
            android:textAlignment="center"
            android:padding="@dimen/padding"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/LuasBalok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_output"
            android:background="@drawable/box"
            android:text="@string/nol"
            android:textSize="@dimen/vol"
            android:padding="@dimen/padding"
            android:layout_weight="1"/>
    </LinearLayout>



    </LinearLayout>

</FrameLayout>